objects/LCRM_Opportunity_Product_Clone__c.object
<CustomObject>
    <fields>
        <fullName>LCRM_Action__c</fullName>
        <label>Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Current_ACV__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Incremental_Amount__c</fullName>
        <formula>LCRM_New_ACV_SalesPrice__c -  LCRM_Current_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incremental Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_New_ACV_SalesPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Opp_Prod_ID__c</fullName>
        <label>Opportunity Product</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Product Clone</relationshipLabel>
        <relationshipName>Opportunity_Product_Clone</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Segment__c</fullName>
        <label>Product Segment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Product Clone</relationshipLabel>
        <relationshipName>Opportunity_Product_Clone</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Product Clone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LCRM_Action__c</columns>
        <columns>LCRM_Current_ACV__c</columns>
        <columns>LCRM_New_ACV_SalesPrice__c</columns>
        <columns>LCRM_Opp_Prod_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Opp Prod Clone No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Product Clone</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>